--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-p, h1, h2, h3 {
+p, h1, h2, h3, li{
   font-family: 'VT323', monospace; /* Asegúrate de mantener esta línea */
 }
 
